@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-09T12:51:24Z",
-  "count_outdated" : 5425,
-  "uniques_outdated" : 1063,
+  "timestamp" : "2025-05-10T12:47:12Z",
+  "count_outdated" : 5426,
+  "uniques_outdated" : 1064,
   "count" : 5508,
   "uniques" : 1081,
   "views" : [
-    {
-      "timestamp": "2025-04-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-27T00:00:00Z",
       "count": 2,
