@@ -1,12 +1,7 @@
 {
-  "count": 83,
-  "uniques": 17,
+  "count": 82,
+  "uniques": 16,
   "views": [
-    {
-      "timestamp": "2025-04-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-27T00:00:00Z",
       "count": 2,
